--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     .qrbox{
       display:grid; place-items:center; padding:16px; background:#ffffff; border-radius:18px; border:1px solid #eef2f7;
     }
-    #qrcode canvas, #qrcode img{ width: 100% !important; height: auto !important; max-width: 260px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,.08) }
+    #qrcode canvas, #qrcode img{ width: 100% !important; height: auto !important; max-width: 260px; }
 
     .upi{
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
