--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
     .btn.phonepe{ background:#5f259f }
     .btn.paytm{ background:#00b9f1 }
 
-    .hint{ text-align:center; font-size:12.5px; color:var(--muted) }
-
-    main{
-      margin-bottom: 3rem;
+    section{
+      margin-bottom: 22px;
     }
+
+    .hint{ text-align:center; font-size:12.5px; color:var(--muted) }
 
     @media (min-width: 760px){
       .card{ grid-template-columns: 1.2fr .9fr; align-items:center }
