--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pay via UPI — Siddha Annam</title>
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Pay via UPI — Siddha Annam">
-  <meta property="og:description" content="Scan the QR or open in GPay / PhonePe / Paytm to pay via UPI.">
-  <meta property="og:image" content="https://api.qrserver.com/v1/create-qr-code/?size=1200x630&data=upi%3A%2F%2Fpay%3Fpa%3D8905933873%2540superyes%26pn%3DShubham%2520Gupta%2520(Siddhannam)%26am%3D350%26cu%3DINR">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta name="twitter:card" content="summary_large_image">
 
+  <link rel="icon" type="image/x-icon" href="https://siddhannam.com/cdn/shop/files/ChatGPT_Image_Apr_13_2025_08_24_10_PM_53f4646b-8c04-4e73-b2be-01c73954af3f.webp">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
